# TAICA_LLM_Cybersecurity_Systems

./: pyproject.toml
Assigment6/: dataset.md  task1_dataset.ipynb  task3_synthetic.ipynb
Assignment6/: dataset.csv  synthetic_data.csv  task2_rag.ipynb
Assignment7/: classification_start_to_end_with_scikit_learn.ipynb  classification_with_scikit-learn.ipynb  clustering_with_scikit-learn.ipynb  convert_to_llama.py  cybersec_sft_rich.json  cybersec_sft_scarce.json  regression_with_scikit-learn.ipynb  task2_clustering.ipynb
Assignment8/: nordic_pii_filter.json  prompt_injection_guard.py  security_analyzer_pipe.py  security_incident_triage_agent.json
