[project]
name = "taica-llm-cybersecurity-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydot>=4.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "torch>=2.0.0,<2.11.0",
]
[tool.uv]
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]
